# vio-footstep-planner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  generate_code.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
config/: planner_config.yaml  vins_config.yaml
quadruped-ppo/: requirements.txt  setup.py
quadruped-ppo/scripts/: evaluate.py
quadruped-ppo/src/quadruped_ppo/: __init__.py
quadruped-ppo/src/quadruped_ppo/envs/: __init__.py  quadruped_env.py
rl-locomotion-cbf/: requirements.txt  setup.py
rl-locomotion-cbf/scripts/: train_ppo.py
rl-locomotion-cbf/src/rl_locomotion_cbf/: __init__.py
rl-locomotion-cbf/src/rl_locomotion_cbf/safety/: __init__.py  cbf_filter.py
scripts/: demo_complete.py  demo_quick.py  example_navigation.py
src/vio_footstep_planner/: __init__.py
src/vio_footstep_planner/drift_correction/: __init__.py  corrector.py  loop_closer.py  pose_graph.py
src/vio_footstep_planner/navigation/: __init__.py  navigator.py
src/vio_footstep_planner/planning/: __init__.py  a_star.py  footstep_planner.py  reachability.py
src/vio_footstep_planner/utils/: __init__.py
src/vio_footstep_planner/vio/: __init__.py  feature_tracker.py  vio_estimator.py
tests/: test_drift_corrector.py  test_feature_tracker.py  test_footstep_planner.py  test_import.py  test_smoke.py  test_vio_estimator.py
vio-footstep-planner/: requirements.txt  setup.py
vio-footstep-planner/scripts/: example_navigation.py
vio-footstep-planner/src/vio_footstep_planner/: __init__.py
vio-footstep-planner/src/vio_footstep_planner/navigation/: navigator.py
