[metadata]
name = vio-footstep-planner
version = 0.0.0
description = VIO + Footstep Planner Fusion for GPS-Denied Navigation
long_description = file: README.md
long_description_content_type = text/markdown
author = Ansh Bhansali
author_email = anshbhansali5@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/ansh1113/vio-footstep-planner

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    opencv-python>=4.5.0
    pyyaml>=5.4.0

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .pytest_cache,
    .mypy_cache,
    .tox

[tool:pytest]
testpaths = tests
addopts = -q --tb=short
python_files = test_*.py
python_classes = Test*
python_functions = test_*
